M1 e M2 finalizados com menu. Verificar links video Lib.

--- a/Layout/Aula/1de1_pt-br.html
+++ b/Layout/Aula/1de1_pt-br.html
@@ -145,39 +145,39 @@
 										<div class="nav nav-pills flex-column">
 											<ul class="icons-list">
 												<li class="nav">
-													<a class="nav-link my-1" href="1de1_pt-br.html#capa">Transição da
+													<a class="nav-link my-1" href="#capa">Transição da
 														matriz energética</a>
 												</li>
 												<div class="nav">
 													<ul class="icons-list">
 														<li> <a class="nav-link ms-3 my-1"
-																href="1de1_pt-br.html#aula1-section-1">Apresentação da
+																href="#aula1-section-1">Apresentação da
 																aula</a> </li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="1de1_pt-br.html#aula1-section-2">Transição da
+																href="#aula1-section-2">Transição da
 																matriz energética</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="1de1_pt-br.html#aula1-section-3">Contexto
+																href="#aula1-section-3">Contexto
 																histórico</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="1de1_pt-br.html#aula1-section-4">Matriz
+																href="#aula1-section-4">Matriz
 																energética</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="1de1_pt-br.html#aula1-section-5">Aspectos
+																href="#aula1-section-5">Aspectos
 																políticos e econômicos</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="1de1_pt-br.html#aula1-section-6">Programas de
+																href="#aula1-section-6">Programas de
 																incentivo à transição energética</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="1de1_pt-br.html#aula1-section-7">Praticando</a>
+																href="#aula1-section-7">Praticando</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="1de1_pt-br.html#aula1-section-8">Recapitulando</a>
+																href="#aula1-section-8">Recapitulando</a>
 														</li>
 													</ul>
 												</div>
@@ -185,39 +185,36 @@
 
 											<ul class="icons-list">
 												<li class="nav">
-													<a class="nav-link my-1" href="1de2_pt-br.html#capa">Tecnologias
+													<a class="nav-link my-1" href="#capa">Tecnologias
 														emergentes e economia circular</a>
 												</li>
 												<div class="nav">
 													<ul class="icons-list">
 														<li><a class="nav-link ms-3 my-1"
-																href="1de2_pt-br.html#aula1-section-1">Apresentação da
+																href="1de2_pt-br.html#aula2-section-1">Apresentação da
 																aula</a> </li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de2_pt-br.html#aula1-section-2">Transição da
-																matriz energética</a>
+																href="1de2_pt-br.html#aula2-section-2">Tecnologias
+																emergentes</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de2_pt-br.html#aula1-section-3">Contexto
-																histórico</a>
+																href="1de2_pt-br.html#aula2-section-3">Economia
+																circular</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de2_pt-br.html#aula1-section-4">Matriz
-																energética</a>
+																href="1de2_pt-br.html#aula2-section-4">Cadeia
+																de
+																valor</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de2_pt-br.html#aula1-section-5">Aspectos
-																políticos e econômicos</a>
+																href="1de2_pt-br.html#aula2-section-5">Reaproveitamento
+																de resíduos</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de2_pt-br.html#aula1-section-6">Programas de
-																incentivo à transição energética</a>
+																href="1de2_pt-br.html#aula2-section-6">Praticando</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="1de2_pt-br.html#aula1-section-7">Praticando</a>
-														</li>
-														<li><a class="nav-link ms-3 my-1"
-																href="1de2_pt-br.html#aula1-section-8">Recapitulando</a>
+																href="1de2_pt-br.html#aula2-section-7">Recapitulando</a>
 														</li>
 													</ul>
 												</div>
@@ -234,30 +231,37 @@
 																href="1de3_pt-br.html#aula1-section-1">Apresentação da
 																aula</a> </li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de3_pt-br.html#aula1-section-2">Transição da
-																matriz energética</a>
+																href="1de3_pt-br.html#aula1-section-2">Efeito estufa e
+																estratégias de redução de gases</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de3_pt-br.html#aula1-section-3">Contexto
-																histórico</a>
+																href="1de3_pt-br.html#aula1-section-3">Impactos da
+																produção de energia utilizando recursos naturais</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de3_pt-br.html#aula1-section-4">Matriz
-																energética</a>
+																href="1de3_pt-br.html#aula1-section-4">Vantagens do agro
+																nacional</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de3_pt-br.html#aula1-section-5">Aspectos
-																políticos e econômicos</a>
+																href="1de3_pt-br.html#aula1-section-5">O uso do solo e a
+																competição entre a produção de alimentos e
+																biocombustíveis</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de3_pt-br.html#aula1-section-6">Programas de
-																incentivo à transição energética</a>
+																href="1de3_pt-br.html#aula1-section-6">Vantagens de
+																culturas alternativas na geração de biomassa e óleos
+																vegetais</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="1de3_pt-br.html#aula1-section-7">Praticando</a>
+																href="1de3_pt-br.html#aula1-section-7">Impactos
+																ambientais relacionados à produção e ao uso de
+																biocombustíveis</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de3_pt-br.html#aula1-section-8">Recapitulando</a>
+																href="1de3_pt-br.html#aula1-section-8">Praticando</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="1de3_pt-br.html#aula1-section-9">Recapitulando</a>
 														</li>
 													</ul>
 												</div>
@@ -376,7 +380,7 @@
 			style="background-image: url('./../Template/img/capa_aula1_1.jpg');">
 			<div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
 				<div class="row mt-2">
-					<h1 class=" text-uppercase mt-5 pt-5 color2"
+					<h1 class=" text-uppercase bg-light rounded text-black"
 						uk-parallax="opacity: 1; y: -0,0; scale: 1.1,2; end: 0vh + 10%;">
 						Transição da matriz energética e seus impactos</h1>
 				</div>
