--- a/Layout/Aula/1de2_pt-br.html
+++ b/Layout/Aula/1de2_pt-br.html
@@ -227,30 +227,37 @@
 																href="1de3_pt-br.html#aula1-section-1">Apresentação da
 																aula</a> </li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de3_pt-br.html#aula1-section-2">Transição da
-																matriz energética</a>
+																href="1de3_pt-br.html#aula1-section-2">Efeito estufa e
+																estratégias de redução de gases</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de3_pt-br.html#aula1-section-3">Contexto
-																histórico</a>
+																href="1de3_pt-br.html#aula1-section-3">Impactos da
+																produção de energia utilizando recursos naturais</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de3_pt-br.html#aula1-section-4">Matriz
-																energética</a>
+																href="1de3_pt-br.html#aula1-section-4">Vantagens do agro
+																nacional</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de3_pt-br.html#aula1-section-5">Aspectos
-																políticos e econômicos</a>
+																href="1de3_pt-br.html#aula1-section-5">O uso do solo e a
+																competição entre a produção de alimentos e
+																biocombustíveis</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de3_pt-br.html#aula1-section-6">Programas de
-																incentivo à transição energética</a>
+																href="1de3_pt-br.html#aula1-section-6">Vantagens de
+																culturas alternativas na geração de biomassa e óleos
+																vegetais</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="1de3_pt-br.html#aula1-section-7">Praticando</a>
+																href="1de3_pt-br.html#aula1-section-7">Impactos
+																ambientais relacionados à produção e ao uso de
+																biocombustíveis</a>
 														</li>
 														<li><a class="nav-link ms-3 my-1"
-																href="1de3_pt-br.html#aula1-section-8">Recapitulando</a>
+																href="1de3_pt-br.html#aula1-section-8">Praticando</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="1de3_pt-br.html#aula1-section-9">Recapitulando</a>
 														</li>
 													</ul>
 												</div>
@@ -369,7 +376,7 @@
 			style="background-image: url('./../Template/img/capa_aula1_2.jpg');">
 			<div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
 				<div class="row mt-2">
-					<h1 class=" text-uppercase mt-5 pt-5 color2"
+					<h1 class=" text-uppercase bg-light rounded text-black"
 						uk-parallax="opacity: 1; y: -0,0; scale: 1.1,2; end: 0vh + 10%;">
 						Tecnologias emergentes e economia circular
 					</h1>
