--- a/Layout/Aula/2de2_pt-br.html
+++ b/Layout/Aula/2de2_pt-br.html
@@ -131,7 +131,7 @@
 						<nav class="nav nav-pills flex-column">
 							<div uk-accordion>
 								<!-- 1 -->
-								<li class="uk-open">
+								<li class="">
 									<a class="nav-link uk-accordion-title">
 										<i class="bi bi-pin-fill"></i>
 										Módulo 1
@@ -140,7 +140,8 @@
 										<div class="nav nav-pills flex-column">
 											<ul class="icons-list">
 												<li class="nav">
-													<a class="nav-link my-1" href="1de1_pt-br.html#capa">Tema/Aula</a>
+													<a class="nav-link my-1" href="1de1_pt-br.html#capa">Transição da
+														matriz energética</a>
 												</li>
 												<div class="nav">
 													<ul class="icons-list">
@@ -148,22 +149,126 @@
 																href="1de1_pt-br.html#aula1-section-1">Apresentação da
 																aula</a> </li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="1de1_pt-br.html#aula1-section-2">Conteúdo</a>
+																href="1de1_pt-br.html#aula1-section-2">Transição da
+																matriz energética</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="1de1_pt-br.html#aula1-section-3">Praticando</a>
+																href="1de1_pt-br.html#aula1-section-3">Contexto
+																histórico</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="1de1_pt-br.html#aula1-section-4">Recapitulando</a>
+																href="1de1_pt-br.html#aula1-section-4">Matriz
+																energética</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="1de1_pt-br.html#aula1-section-5">Aspectos
+																políticos e econômicos</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="1de1_pt-br.html#aula1-section-6">Programas de
+																incentivo à transição energética</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="1de1_pt-br.html#aula1-section-7">Praticando</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="1de1_pt-br.html#aula1-section-8">Recapitulando</a>
 														</li>
 													</ul>
 												</div>
 											</ul>
+
+											<ul class="icons-list">
+												<li class="nav">
+													<a class="nav-link my-1" href="1de2_pt-br.html#capa">Tecnologias
+														emergentes e economia circular</a>
+												</li>
+												<div class="nav">
+													<ul class="icons-list">
+														<li><a class="nav-link ms-3 my-1"
+																href="1de2_pt-br.html#aula2-section-1">Apresentação da
+																aula</a> </li>
+														<li><a class="nav-link ms-3 my-1"
+																href="1de2_pt-br.html#aula2-section-2">Tecnologias
+																emergentes</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="1de2_pt-br.html#aula2-section-3">Economia
+																circular</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="1de2_pt-br.html#aula2-section-4">Cadeia
+																de
+																valor</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="1de2_pt-br.html#aula2-section-5">Reaproveitamento
+																de resíduos</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="1de2_pt-br.html#aula2-section-6">Praticando</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="1de2_pt-br.html#aula2-section-7">Recapitulando</a>
+														</li>
+													</ul>
+												</div>
+											</ul>
+
+											<ul class="icons-list">
+												<li class="nav">
+													<a class="nav-link my-1" href="1de3_pt-br.html#capa">Gases do efeito
+														estufa e recursos naturais</a>
+												</li>
+												<div class="nav">
+													<ul class="icons-list">
+														<li><a class="nav-link ms-3 my-1"
+																href="1de3_pt-br.html#aula3-section-1">Apresentação da
+																aula</a> </li>
+														<li><a class="nav-link ms-3 my-1"
+																href="1de3_pt-br.html#aula3-section-2">Efeito
+																estufa e
+																estratégias de redução de gases</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="1de3_pt-br.html#aula3-section-3">Impactos da
+																produção de energia utilizando recursos naturais</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="1de3_pt-br.html#aula3-section-4">Vantagens do agro
+																nacional</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="1de3_pt-br.html#aula3-section-5">O uso
+																do solo e a
+																competição entre a produção de alimentos e
+																biocombustíveis</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="1de3_pt-br.html#outroId">Vantagens de
+																culturas alternativas na geração de biomassa e óleos
+																vegetais</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="1de3_pt-br.html#aula3-section-7">Impactos
+																ambientais relacionados à produção e ao uso de
+																biocombustíveis</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="1de3_pt-br.html#aula3-section-8">Praticando</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="1de3_pt-br.html#aula3-section-9">Recapitulando</a>
+														</li>
+													</ul>
+												</div>
+											</ul>
+
 										</div>
 									</div>
 								</li>
 								<!-- 2 -->
-								<li>
+								<li class="uk-open">
 									<a class="nav-link uk-accordion-title">
 										<i class="bi bi-pin-fill"></i>
 										Módulo 2
@@ -172,85 +277,144 @@
 										<div class="nav nav-pills flex-column">
 											<ul class="icons-list">
 												<li class="nav">
-													<a class="nav-link my-1" href="2de1_pt-br.html#capa">Tema/Aula</a>
+													<a class="nav-link my-1" href="2de1_pt-br.html#capa">Biomassa
+														lignocelulósica
+													</a>
 												</li>
 												<div class="nav">
 													<ul class="icons-list">
-														<li> <a class="nav-link ms-3 my-1"
-																href="2de1_pt-br.html#aula2-section-1">Apresentação da
+														<li><a class="nav-link ms-3 my-1"
+																href="2de1_pt-br.html#2-aula1-section-1">Apresentação da
 																aula</a> </li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="2de1_pt-br.html#aula2-section-2">Conteúdo</a>
+																href="2de1_pt-br.html#2-aula1-section-2">Biomassa
+																lignocelulósica: agrícolas e florestais</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="2de1_pt-br.html#aula2-section-3">Praticando</a>
+																href="2de1_pt-br.html#2-aula1-section-3">Características
+																químicas e físicas</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="2de1_pt-br.html#aula2-section-4">Recapitulando</a>
+																href="2de1_pt-br.html#2-aula1-section-4">Pré-tratamentos</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="2de1_pt-br.html#2-aula1-section-5">Aplicações e
+																perspectivas</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="2de1_pt-br.html#2-aula1-section-6">Praticando</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="2de1_pt-br.html#2-aula1-section-7">Recapitulando</a>
 														</li>
 													</ul>
 												</div>
 											</ul>
-										</div>
-									</div>
-								</li>
-								<!-- 3 -->
-								<li>
-									<a class="nav-link uk-accordion-title">
-										<i class="bi bi-pin-fill"></i>
-										Módulo 3
-									</a>
-									<div class="uk-accordion-content">
-										<div class="nav nav-pills flex-column">
+
 											<ul class="icons-list">
 												<li class="nav">
-													<a class="nav-link my-1" href="3de1_pt-br.html#capa">Tema/Aula</a>
+													<a class="nav-link my-1" href="#capa">Biomassa
+														residual orgânica</a>
 												</li>
 												<div class="nav">
 													<ul class="icons-list">
-														<li> <a class="nav-link ms-3 my-1"
-																href="3de1_pt-br.html#aula3-section-1">Apresentação da
+														<li><a class="nav-link ms-3 my-1"
+																href="#2-aula2-section-1">Apresentação da
 																aula</a> </li>
-														<li> <a class="nav-link ms-3 my-1"
-																href="3de1_pt-br.html#aula3-section-2">Conteúdo</a>
+														<li><a class="nav-link ms-3 my-1"
+																href="#2-aula2-section-2">Biomassa residual
+																orgânica</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="#2-aula2-section-3">Características
+																físico-químicas do resíduo orgânico urbano</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="#2-aula2-section-4">Principais fontes
+																de resíduos orgânicos urbanos</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="#2-aula2-section-5">Efluentes
+																domésticos × efluentes industriais (resíduos
+																orgânicos)</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="#2-aula2-section-6">Resíduos
+																agrícolas</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="#2-aula2-section-7">Aplicações de
+																biomassa residual orgânica</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1" href="#2-aula2-section-8">Uso
+																de biomassa
+																residual orgânica na produção de biocombustíveis</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="#2-aula2-section-9">Benefícios
+																ambientais para o uso de biomassa residual orgânica</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="#2-aula2-section-10">Perspectivas
+																futuras para desenvolvimento e utilização de biomassa
+																residual orgânica</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="#2-aula2-section-11">Praticando</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="3de1_pt-br.html#aula3-section-3">Praticando</a>
-														</li>
-														<li> <a class="nav-link ms-3 my-1"
-																href="3de1_pt-br.html#aula3-section-4">Recapitulando</a>
+																href="#2-aula2-section-12">Recapitulando</a>
 														</li>
 													</ul>
 												</div>
 											</ul>
-										</div>
-									</div>
-								</li>
-								<!-- 4 -->
-								<li>
-									<a class="nav-link uk-accordion-title">
-										<i class="bi bi-pin-fill"></i>
-										Módulo 4
-									</a>
-									<div class="uk-accordion-content">
-										<div class="nav nav-pills flex-column">
+
 											<ul class="icons-list">
 												<li class="nav">
-													<a class="nav-link my-1" href="4de1_pt-br.html#capa">Tema/Aula</a>
+													<a class="nav-link my-1" href="2de3_pt-br.html#2-capa">Biomassa
+														aquática</a>
 												</li>
 												<div class="nav">
 													<ul class="icons-list">
-														<li> <a class="nav-link ms-3 my-1"
-																href="4de1_pt-br.html#aula4-section-1">Apresentação da
+														<li><a class="nav-link ms-3 my-1"
+																href="2de3_pt-br.html#2-aula3-section-1">Apresentação da
 																aula</a> </li>
-														<li> <a class="nav-link ms-3 my-1"
-																href="4de1_pt-br.html#aula4-section-2">Conteúdo</a>
+														<li><a class="nav-link ms-3 my-1"
+																href="2de3_pt-br.html#2-aula3-section-2">Biomassa
+																aquática: macro e
+																microalgas</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="2de3_pt-br.html#2-aula3-section-3">Características
+																químicas e
+																físicas</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="2de3_pt-br.html#2-aula3-section-4">Características
+																das
+																microalgas</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="2de3_pt-br.html#2-aula3-section-5">Características
+																das
+																macroalgas</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="2de3_pt-br.html#2-outroId">Características de
+																cultivo</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="4de1_pt-br.html#aula4-section-3">Praticando</a>
+																href="2de3_pt-br.html#2-aula3-section-7">Pré-tratamentos</a>
 														</li>
 														<li> <a class="nav-link ms-3 my-1"
-																href="4de1_pt-br.html#aula4-section-4">Recapitulando</a>
+																href="2de3_pt-br.html#2-aula3-section-8">Aplicações e
+																perspectivas</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="2de3_pt-br.html#2-aula3-section-9">Praticando</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="2de3_pt-br.html#2-aula3-section-10">Recapitulando</a>
 														</li>
 													</ul>
 												</div>
@@ -272,7 +436,7 @@
 			style="background-image: url('./../Template/img/capa_aula2_2.jpeg');">
 			<div class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical">
 				<div class="row mt-2">
-					<h1 class=" text-uppercase mt-5 pt-5 color2"
+					<h1 class=" text-uppercase bg-light rounded text-black"
 						uk-parallax="opacity: 1; y: -0,0; scale: 1.1,2; end: 0vh + 10%;">
 						Biomassa residual orgânica
 					</h1>
@@ -292,7 +456,7 @@
 			<br>
 		</section>
 		<!-- APRESENTACAO -->
-		<section class="d-flex py-4 flex-column justify-content-center" id="aula1-section-1">
+		<section class="d-flex py-4 flex-column justify-content-center" id="2-aula2-section-1">
 			<article class="container">
 				<div class="row">
 					<div class="align-self-start ">
@@ -307,12 +471,14 @@
 					</p>
 				</div>
 			</article>
-		</section> <!-- lorem -->
+		</section>
+
+		<!-- lorem -->
 		<section class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex"
 			style="background: linear-gradient(90deg, var(--color1), var(--color2));background-size: 400% 400%;        animation: gradient 25s ease infinite;height:auto">
 			<br>
-		</section> <!-- lorem -->
-		<section class="d-flex min-vh-100 flex-column justify-content-center" id="aula1-section-2">
+		</section>
+		<section class="d-flex min-vh-100 flex-column justify-content-center" id="2-aula2-section-2">
 			<article class="container py-4">
 				<div class="align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2 py-4 ">
 					<div class="section-level1">
@@ -398,6 +564,8 @@
 					</div>
 				</div>
 			</article>
+		</section>
+		<section class="d-flex min-vh-100 flex-column justify-content-center" id="2-aula2-section-3">
 			<article class="container py-4">
 				<div class="align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2 py-4 ">
 					<div class="section-level1">
@@ -550,7 +718,8 @@
 					</div>
 				</div>
 			</article>
-
+		</section>
+		<section class="d-flex min-vh-100 flex-column justify-content-center" id="2-aula2-section-4">
 			<article class="container py-4">
 				<div class="align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2 py-4 ">
 					<div class="section-level1">
@@ -775,6 +944,8 @@
 					</div>
 				</div>
 			</article>
+		</section>
+		<section class="d-flex min-vh-100 flex-column justify-content-center" id="2-aula2-section-5">
 			<article class="container py-4">
 				<div class="align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2 py-4 ">
 					<div class="section-level1">
@@ -899,7 +1070,7 @@
 			</article>
 		</section>
 
-		<section class="d-flex min-vh-100 flex-column justify-content-center">
+		<section class="d-flex min-vh-100 flex-column justify-content-center" id="2-aula2-section-6">
 			<article class="container py-4">
 				<div class="align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2 py-4 ">
 					<div class="section-level1">
@@ -962,6 +1133,8 @@
 					</p>
 				</div>
 			</article>
+		</section>
+		<section class="d-flex min-vh-100 flex-column justify-content-center" id="2-aula2-section-7">
 			<article class="container py-4">
 				<div class="align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2 py-4 ">
 					<div class="section-level1">
@@ -989,6 +1162,8 @@
 					</div>
 				</div>
 			</article>
+		</section>
+		<section class="d-flex min-vh-100 flex-column justify-content-center" id="2-aula2-section-8">
 			<article class="container py-4">
 				<div class="align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2 py-4 ">
 					<div class="section-level1">
@@ -1163,6 +1338,8 @@
 					</div>
 				</div>
 			</article>
+		</section>
+		<section class="d-flex min-vh-100 flex-column justify-content-center" id="2-aula2-section-9">
 			<article class="container py-4">
 				<div class="align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2 py-4 ">
 					<div class="section-level1">
@@ -1282,6 +1459,9 @@
 					</div>
 				</div>
 			</article>
+		</section>
+
+		<section class="d-flex min-vh-100 flex-column justify-content-center" id="2-aula2-section-10">
 			<article class="container py-4">
 				<div class="align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2 py-4 ">
 					<div class="section-level1">
@@ -1387,13 +1567,14 @@
 					</div>
 				</div>
 			</article>
-
 		</section>
+
 		<section class="uk-height-large uk-background-cover uk-overflow-hidden uk-light uk-flex"
 			style="background: linear-gradient(90deg, var(--color1), var(--color2));background-size: 400% 400%;        animation: gradient 25s ease infinite;height:auto">
 			<br>
 		</section>
-		<section class="d-flex min-vh-100 flex-column justify-content-center exercicios py-3" id="exercicios">
+
+		<section class="d-flex min-vh-100 flex-column justify-content-center exercicios py-3" id="2-aula2-section-11">
 			<article class="container py-4">
 				<div class="border rounded">
 					<h1 class="p-4">Praticando</h1>
@@ -1401,9 +1582,10 @@
 				</div>
 			</article>
 		</section>
+
 		<hr class="uk-divider-icon">
 		<!-- Recapitulando -->
-		<section class="d-flex flex-column justify-content-center" id="recapitulando">
+		<section class="d-flex flex-column justify-content-center" id="2-aula2-section-12">
 			<article class="container py-4">
 				<div class="align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2 py-4 ">
 					<div class="section-level1">
