M4 finalizado com menu.

--- a/Layout/Aula/1de2_pt-br.html
+++ b/Layout/Aula/1de2_pt-br.html
@@ -270,7 +270,7 @@
 									</div>
 								</li>
 								<!-- 2 -->
-								<li class="">
+								<li>
 									<a class="nav-link uk-accordion-title">
 										<i class="bi bi-pin-fill"></i>
 										Módulo 2
@@ -650,6 +650,121 @@
 														</li>
 														<li><a class="nav-link ms-3 my-1"
 																href="3de4_pt-br.html#3-aula4-section-9">Recapitulando</a>
+														</li>
+													</ul>
+												</div>
+											</ul>
+										</div>
+									</div>
+								</li>
+								<!-- 4 -->
+								<li>
+									<a class="nav-link uk-accordion-title">
+										<i class="bi bi-pin-fill"></i>
+										Módulo 4
+									</a>
+									<div class="uk-accordion-content">
+										<div class="nav nav-pills flex-column">
+											<ul class="icons-list">
+												<li class="nav">
+													<a class="nav-link my-1" href="4de1_pt-br.html#capa">Poder
+														calorífico e rendimento</a>
+												</li>
+												<div class="nav">
+													<ul class="icons-list">
+														<li><a class="nav-link ms-3 my-1"
+																href="4de1_pt-br.html#4-aula1-section-1">Apresentação da
+																aula</a> </li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="4de1_pt-br.html#4-aula1-section-2">O que é poder
+																calorífico?</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="4de1_pt-br.html#4-aula1-section-3">Principais
+																biocombustíveis e seu poder calorífico</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="4de1_pt-br.html#4-aula1-section-4">Balanço
+																energético de biocombustíveis (produção X uso de
+																energia)</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="4de1_pt-br.html#4-aula1-section-5">Rendimento
+																energético de biocombustíveis</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="4de1_pt-br.html#4-aula1-section-6">Praticando</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="4de1_pt-br.html#4-aula1-section-7">Recapitulando</a>
+														</li>
+													</ul>
+												</div>
+											</ul>
+											<ul class="icons-list">
+												<li class="nav">
+													<a class="nav-link my-1" href="4de2_pt-br.html#4apa">
+														Viabilidade econômica
+													</a>
+												</li>
+												<div class="nav">
+													<ul class="icons-list">
+														<li><a class="nav-link ms-3 my-1"
+																href="4de2_pt-br.html#4-aula2-section-1">Apresentação da
+																aula</a> </li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="4de2_pt-br.html#4-aula2-section-2">Introdução</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="4de2_pt-br.html#4-aula2-section-3">Principais
+																custos de produção</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="4de2_pt-br.html#4-aula2-section-4">Comparação com
+																combustíveis fósseis</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="4de2_pt-br.html#4-aula2-section-5">Efeitos dos
+																subsídios governamentais</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="4de2_pt-br.html#4-aula2-section-6">Praticando</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="4de2_pt-br.html#4-aula2-section-7">Recapitulando</a>
+														</li>
+													</ul>
+												</div>
+											</ul>
+											<ul class="icons-list">
+												<li class="nav">
+													<a class="nav-link my-1" href="4de3_pt-br.html#4apa">Descarbonização
+														e inovação na geração de energia</a>
+												</li>
+												<div class="nav">
+													<ul class="icons-list">
+														<li><a class="nav-link ms-3 my-1"
+																href="4de3_pt-br.html#4-aula3-section-1">Apresentação da
+																aula</a> </li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="4de3_pt-br.html#4-aula3-section-2">O que é
+																descarbonização?</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="4de3_pt-br.html#4-aula3-section-3">Tecnologias e
+																inovações recentes na produção de biocombustíveis e sua
+																contribuição para a descarbonização do setor
+																energético</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="4de3_pt-br.html#4-aula3-section-4">Casos de
+																sucesso</a>
+														</li>
+														<li> <a class="nav-link ms-3 my-1"
+																href="4de3_pt-br.html#4-aula3-section-5">Praticando</a>
+														</li>
+														<li><a class="nav-link ms-3 my-1"
+																href="4de3_pt-br.html#4-aula3-section-6">Recapitulando</a>
 														</li>
 													</ul>
 												</div>
