SCORM Finalizado - Falta Link Videos

--- a/Layout/Aula/1de2_pt-br.html
+++ b/Layout/Aula/1de2_pt-br.html
@@ -766,6 +766,10 @@
 														<li><a class="nav-link ms-3 my-1"
 																href="4de3_pt-br.html#4-aula3-section-6">Recapitulando</a>
 														</li>
+														<li> <a class="nav-link my-1"
+																href="4de3_pt-br.html#4-aula3-section6">Referências e
+																Créditos</a>
+														</li>
 													</ul>
 												</div>
 											</ul>
